--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -1,1 +1,222 @@
+.contacts {
+   margin-left: auto;
+   margin-right: auto;
+}
 
+.contacts__list {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 20px;
+   margin-bottom: 32px;
+
+   @media screen and(min-width:768px) {
+      flex-direction: row;
+      gap: 16px;
+      justify-content: center;
+      margin-bottom: 60px;
+   }
+   @media screen and(min-width:1200px) {
+      gap: 32px;
+      margin-bottom: 62px;
+   }
+}
+
+.contacts__item {
+   background-color: #ffffff;
+   padding: 40px 32px;
+   border-radius: 24px;
+   width: 280px;
+
+   @media screen and(min-width:768px) {
+      padding: 40px 24px;
+      width: 224px;
+      // width: calc((100% - 32px) / 3);
+   }
+   @media screen and(min-width:1200px) {
+      padding: 40px 40px;
+      width: 368px;
+      // width: calc((100% - 64px) / 3);
+   }
+}
+
+.contacts__div {
+   padding-bottom: 24px;
+   border-bottom: 1px solid #e1e1e1;
+   margin-bottom: 24px;
+
+   @media screen and(min-width:768px) {
+      margin-bottom: 32px;
+      padding-bottom: 32px;
+   }
+}
+.contacts__place {
+   display: inline-block;
+   @include fonts($fw: 500, $fs: 14px, $lh: 22px, $ls: 0.04em);
+   padding: 2px 10px;
+   border-radius: 4px;
+   color: #131313;
+   background-color: #f8d24e;
+   margin-bottom: 20px;
+
+   @media screen and(min-width:768px) {
+      @include fonts($fw: 500, $fs: 16px, $lh: 30px, $ls: 0.04em);
+      margin-bottom: 30px;
+   }
+   @media screen and(min-width:1200px) {
+      margin-bottom: 32px;
+   }
+}
+
+.contacts__town {
+   margin-bottom: 20px;
+   color: #131313;
+   @include fonts($fw: 500, $fs: 12px, $lh: 22px, $ls: 0.04em);
+
+   @media screen and(min-width:768px) {
+      @include fonts($fw: 500, $fs: 14px, $lh: 26px, $ls: 0.04em);
+   }
+   @media screen and(min-width:1200px) {
+      @include fonts($fw: 500, $fs: 16px, $lh: 30px, $ls: 0.04em);
+   }
+}
+.contacts__link {
+   display: inline-block;
+   color: #d6936d;
+   @include fonts($fw: 500, $fs: 12px, $lh: 22px, $ls: 0.04em);
+
+   @media screen and(min-width:768px) {
+      @include fonts($fw: 500, $fs: 14px, $lh: 26px, $ls: 0.04em);
+   }
+   @media screen and(min-width:1200px) {
+      font-size: 16px;
+      line-height: 29px;
+   }
+
+   &:hover {
+      text-decoration: underline;
+   }
+}
+
+.timetable {
+   padding-bottom: 24px;
+   border-bottom: 1px solid #e1e1e1;
+   margin-bottom: 24px;
+
+   @media screen and(min-width:768px) {
+      margin-bottom: 32px;
+      padding-bottom: 32px;
+   }
+}
+
+.timetable__day {
+   color: #131313;
+   @include fonts($fw: 500, $fs: 12px, $lh: 22px);
+
+   @media screen and(min-width:768px) {
+      @include fonts($fw: 500, $fs: 14px, $lh: 26px);
+   }
+   @media screen and(min-width:1200px) {
+      @include fonts($fw: 500, $fs: 16px, $lh: 30px);
+   }
+}
+
+.timetable__time {
+   margin-bottom: 8px;
+   color: #ababab;
+   @include fonts($fw: 500, $fs: 12px, $lh: 22px);
+
+   @media screen and(min-width:768px) {
+      @include fonts($fw: 500, $fs: 14px, $lh: 26px);
+   }
+   @media screen and(min-width:1200px) {
+      @include fonts($fw: 500, $fs: 16px, $lh: 30px);
+   }
+}
+
+.connect__link {
+   @include fonts($fw: 500, $fs: 12px, $lh: 18px);
+
+   color: #131313;
+
+   @media screen and(min-width:768px) {
+      @include fonts($fw: 500, $fs: 14px, $lh: 26px);
+   }
+   @media screen and(min-width:1200px) {
+      @include fonts($fw: 500, $fs: 16px, $lh: 29px);
+   }
+}
+
+.contacts-btn__list {
+   display: flex;
+   justify-content: center;
+   gap: 16px;
+
+   @media screen and(max-width:767px) {
+      flex-direction: column;
+   }
+}
+
+.contacts-btn__locations {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 6px;
+   width: 196px;
+   height: 42px;
+   margin: 0 auto;
+
+   @include fonts($fw: 600, $fs: 14px, $lh: 18px);
+   font-style: normal;
+
+   color: #000000;
+   background-color: getColor(btn-default);
+   border: 2px solid transparent;
+   border-radius: 10px;
+
+   &:hover {
+      background-color: getColor(btn-hover);
+   }
+   &:focus {
+      color: getColor(txt-white);
+      background-color: getColor(btn-focus);
+   }
+   &:disabled {
+      background-color: getColor(btn-disabled);
+   }
+}
+
+.contacts-btn__franchise {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 6px;
+   width: 196px;
+   height: 42px;
+   padding: 12px 34px;
+   margin: 0 auto;
+
+   @include fonts($fw: 600, $fs: 14px, $lh: 18px);
+   font-style: normal;
+
+   background-color: transparent;
+   color: #000000;
+   border: 2px solid getColor(accent);
+   border-radius: 10px;
+
+   &:hover {
+      border: 2px solid getColor(btn-hover);
+   }
+   &:focus {
+      color: getColor(txt-white);
+      border: 2px solid getColor(btn-focus);
+   }
+   &:disabled {
+      border: 2px solid getColor(btn-disabled);
+   }
+}
+
+.contacts-btn__icon {
+   width: 12px;
+   height: 12px;
+}
