тепер точно готово

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -9,7 +9,11 @@
            <li class="nav__item"><a href="" class="nav__link">Our products</a></li>
            <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
         </ul>
-        <button type="button" class="btn__modal">Buy now</button>
+        <button type="button" class="btn__modal buy-now-btn">Buy now 
+            <svg class="btn-icon">
+                <use href="./images/icons.svg#icon-btn-arrow"></use>
+            </svg>
+        </button>
     </nav>
     <button type="button" class="btn-menu" data-menu-button>
         <svg width="32" height="32">
@@ -17,7 +21,11 @@
             <use href="./images/icons.svg#icon-menu-close" class="svg-close"></use>
         </svg>
     </button>
-   <button type="button" class="btn__modal-outside">Buy now</button>
+   <button type="button" class="btn__modal-outside buy-now-btn">Buy now
+        <svg class="btn-icon">
+            <use href="./images/icons.svg#icon-btn-arrow"></use>
+        </svg>
+   </button>
 </header>
 
 <!-- hero -->
@@ -28,10 +36,10 @@
                 <h1 class="hero__title">ice cream made with <span>passion</span></h1>
 
                 <ul class="hero__list-anchor">
-                    <li class="hero__item-anchor">
+                    <li class="hero__item-anchor products-btn">
                         <a href="" class="hero__link">Products</a>
                     </li>
-                    <li class="hero__item-anchor">
+                    <li class="hero__item-anchor btn-how-its-made">
                         <a href="" class="hero__link">How it’s made?</a>
                     </li>
                 </ul>
