ну тепер вже точно все

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -37,7 +37,7 @@
 
                 <ul class="hero__list-anchor">
                     <li class="hero__item-anchor products-btn">
-                        <a href="" class="hero__link">Products</a>
+                        <a href="#products" class="hero__link">Products</a>
                     </li>
                     <li class="hero__item-anchor btn-how-its-made">
                         <a href="" class="hero__link">How it’s made?</a>
