--- a/src/sass/base/_base-styles.scss
+++ b/src/sass/base/_base-styles.scss
@@ -4,18 +4,16 @@ body {
    color: getColor('txt-white');
 }
 
-// .backdrop {
-//    position: fixed;
-//    top: 0;
-//    left: 0;
-//    z-index: 1000;
-
-//    width: 100%;
-//    height: 100%;
-//    background: rgba(0, 0, 0, 0.2);
-
-//    transition: scale var(--animation-time) var(--transition-timing-function);
-// }
+.backdrop {
+   position: fixed;
+   top: 0;
+   left: 0;
+   z-index: 1000;
+   width: 100%;
+   height: 100%;
+   background: rgba(0, 0, 0, 0.2);
+   transition: scale var(--animation-time) var(--transition-timing-function);
+}
 
 .container {
    width: $mobile;
