--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,33 +1,41 @@
-<section class="advantages">
-    <div class="advantages__box">
-        <ul class="advantages__list">
-            <li class="advantages__item">
-                <svg class="advantages__icon" width="50" height="50">
-                    <use href="../images/icons.svg#icon-cow">
-                    </use>
-                </svg>
-                <p class="advantages__text"><span class="advantages__info">721</span><br>Aliquam ac dui vel dui vulputate
-                    consectetur. Mauris
-                    massa.</p>
-            </li>
-            <li class="advantages__item">
-                <svg class="advantages__icon" width="50" height="50">
-                    <use href="../images/icons.svg#icon-weight">
-                    </use>
-                </svg>
-                <p class="advantages__text"><span class="advantages__info">16kg</span><br>Aliquam ac dui vel dui vulputate
-                    consectetur. Mauris
-                    massa.</p>
-            </li>
-            <li class="advantages__item">
-                <svg class="advantages__icon" width="50" height="50">
-                    <use href="../images/icons.svg#icon-ice-cream">
-                    </use>
-                </svg>
-                <p class="advantages__text"><span class="advantages__info">84</span><br>Aliquam ac dui vel dui vulputate consectetur.
-                    Mauris
-                    massa.</p>
-            </li>
-        </ul>
-    </div>
-</section>
+<body>
+    <section class="advantages">
+        <div class="container advantages__container">
+            <ul class="advantages__list">
+                <li class="advantages__item">
+                    <div class="advantages__box">
+                        <svg class="advantages__icon" width="50" height="50">
+                            <use href="../images/icons.svg#icon-cow">
+                        </use>
+                        </svg>
+                    </div>
+                    <span class="advantages__info">721</span>
+                    <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                </li>
+                <li class="advantages__item">
+                    <div class="advantages__box">
+                        <svg class="advantages__icon" width="50" height="50">
+                            <use href="../images/icons.svg#icon-weight">
+                        </use>
+                    </div>
+                    </svg>
+                    <span class="advantages__info">16kg</span>
+                    <p class="advantages__text">Aliquam ac dui vel dui
+                        vulputate
+                        consectetur. Mauris
+                        massa.</p>
+                </li>
+                <li class="advantages__item">
+                    <div class="advantages__box">
+                        <svg class="advantages__icon" width="50" height="50">
+                            <use href="../images/icons.svg#icon-ice-cream">
+                        </use>
+                    </div>
+                    </svg>
+                    <span class="advantages__info">84</span>
+                    <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+</body>
