--- a/src/partials/hero-modal.html
+++ b/src/partials/hero-modal.html
@@ -1,4 +1,9 @@
 <div class="modal-ingridients visually-hidden">
+   <button class="modal-btn" type="button">
+      <svg width="20" height="20">
+         <use href="./images/icons.svg#icon-menu-close"></use>
+      </svg>
+   </button>
    <p class="modal-ingridients__title">Chololate icecream</p>
    <div class="modal-ingridients__wrapper">
       <div class="modal-ingridients__image-element"></div>
