--- a/src/partials/products-modal.html
+++ b/src/partials/products-modal.html
@@ -1,4 +1,9 @@
 <div class="modal-buy">
+   <button class="modal-btn" type="button">
+      <svg width="20" height="20">
+         <use href="./images/icons.svg#icon-menu-close"></use>
+      </svg>
+   </button>
    <span class="modal-title modal-title--buy">Buy now</span>
    <ul class="modal-buy__list-check">
       <input type="checkbox" id="icecream" class="modal-buy__checkbox modal-buy__checkbox--green" hidden>
