--- a/src/partials/about-modal.html
+++ b/src/partials/about-modal.html
@@ -1,4 +1,9 @@
 <div class="modal-content visually-hidden">
+   <button class="modal-btn" type="button">
+      <svg width="20" height="20">
+         <use href="./images/icons.svg#icon-menu-close"></use>
+      </svg>
+   </button>
    <span class="modal-content__title">How it’s made?</span>
    <iframe src="https://www.youtube.com/embed/8WEMZ86Eho8?controls=0" class="modal-content__map"
       title="YouTube video player" frameborder="0"
