--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -9,7 +9,7 @@
            <li class="nav__item"><a href="" class="nav__link">Our products</a></li>
            <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
         </ul>
-        <button type="button" class="btn__modal buy-now-btn">Buy now 
+        <button type="button" class="hero__btn__modal buy-now-btn">Buy now 
             <svg class="btn-icon">
                 <use href="./images/icons.svg#icon-btn-arrow"></use>
             </svg>
@@ -21,7 +21,7 @@
             <use href="./images/icons.svg#icon-menu-close" class="svg-close"></use>
         </svg>
     </button>
-   <button type="button" class="btn__modal-outside buy-now-btn">Buy now
+   <button type="button" class="hero__btn__modal-outside buy-now-btn">Buy now
         <svg class="btn-icon">
             <use href="./images/icons.svg#icon-btn-arrow"></use>
         </svg>
