--- a/src/sass/base/_base-styles.scss
+++ b/src/sass/base/_base-styles.scss
@@ -20,6 +20,7 @@ body {
 .container {
    width: $mobile;
    padding: 0 20px;
+   @include margin-auto();
 
    @include tablet() {
       width: $tablet;
