--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -1,4 +1,4 @@
-.container {
+.customer {
     width: $mobile;
     padding: 80px 20px 394px;
 
@@ -12,7 +12,7 @@
 
     @include desktop() {
         width: $desktop;
-        padding: 128px 116px 207px;
+        padding: 223px 116px 207px;
 
     }
 }
@@ -77,7 +77,7 @@
             @include fonts($fw: 500, $fs: 16px, $lh: 29.76px, $ls: 0.04em);
         }
 
-        
+
 
     }
 
@@ -97,7 +97,7 @@
 
     &__card-img {
         margin-left: auto;
-        margin-right:auto;
+        margin-right: auto;
         background: #6E6E6E;
         border-radius: 44px;
         margin-bottom: 32px;
@@ -157,5 +157,5 @@
 }
 
 .customer__dot--active {
-    background-color: getColor('background') ;
+    background-color: getColor('background');
 }
