--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -38,6 +38,10 @@
         text-transform: uppercase;
 
         margin-bottom: 148px;
+
+        @include desktop() {
+            margin-bottom: 302px;
+        }
     }
 }
 
@@ -47,6 +51,7 @@
             display: flex;
             gap: 16px;
         }
+
         @include desktop {
             display: flex;
             gap: 66px;
@@ -59,6 +64,10 @@
 
         padding-top: 123px;
 
+        @include desktop() {
+            padding-top: 165px;
+        }
+
         border-radius: 24px;
 
         background-color: getColor("icecofee-background");
@@ -68,6 +77,7 @@
                 margin-bottom: 164px;
             }
         }
+
         @include desktop {
             height: 535px;
         }
@@ -88,7 +98,13 @@
             box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
 
             border-radius: 50%;
+
+            @include desktop() {
+                width: 300px;
+                height: 300px;
+            }
         }
+
         &::after {
             content: "";
             display: block;
@@ -104,6 +120,11 @@
             background-size: cover;
 
             border-radius: 50%;
+
+            @include desktop() {
+                width: 300px;
+                height: 300px;
+            }
         }
 
         &:first-child {
@@ -123,7 +144,13 @@
                 box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
 
                 border-radius: 50%;
+
+                @include desktop() {
+                    width: 300px;
+                    height: 300px;
+                }
             }
+
             &::after {
                 content: "";
                 position: absolute;
@@ -138,11 +165,17 @@
                 background-size: cover;
 
                 border-radius: 50%;
+
+                @include desktop() {
+                    width: 300px;
+                    height: 300px;
+                }
             }
         }
 
         &:last-child {
             background-color: getColor("milkshakes-background");
+
             &::before {
                 content: "";
                 position: absolute;
@@ -157,7 +190,13 @@
                 box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
 
                 border-radius: 50%;
+
+                @include desktop() {
+                    width: 300px;
+                    height: 300px;
+                }
             }
+
             &::after {
                 content: "";
                 position: absolute;
@@ -172,6 +211,11 @@
                 background-size: cover;
 
                 border-radius: 50%;
+
+                @include desktop() {
+                    width: 300px;
+                    height: 300px;
+                }
             }
         }
     }
