--- a/src/sass/layouts/_header-hero.scss
+++ b/src/sass/layouts/_header-hero.scss
@@ -419,8 +419,57 @@
     }
     
     @include desktop {
-        position: absolute;
         width: 620px;
+        position: absolute;
     }
 }
 
+.hero__anchor-products {
+    display: inline-block;
+    padding: 6px 12px;
+    
+    border: 2px solid getColor(accent);
+    border-radius: 8px;
+
+    @include fonts ($fs: 8px, $lh: 10px, $fw: 600);
+    color: getColor(txt-black);
+    
+    transition: color 250ms $animation, border-color 250ms $animation;
+
+    &:hover {
+        border: 2px solid getColor(btn-hover);
+    }
+    &:focus {
+        border: 2px solid getColor(btn-hover);
+        color: getColor(txt-white);
+
+    }
+
+    @include desktop {    
+        @include fonts ($fs: 14px, $lh: 18px, $fw: 600);
+        padding: 12px 34px;
+        border-radius: 10px;
+    }
+}
+
+.hero__anchor-how {
+    display: inline-block;
+    padding: 8px 12px;
+    text-decoration: underline;
+    
+    @include fonts ($fs: 8px, $lh: 10px, $fw: 600);
+    
+    transition: color 250ms $animation;
+
+    &:hover {
+        color: getColor(btn-hover);
+    }
+    &:focus {
+        color: getColor(txt-white);
+    }
+    
+    @include desktop {
+        @include fonts ($fs: 14px, $lh: 18px, $fw: 600);
+        padding: 14px 34px;
+    }
+}
