--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,51 +4,59 @@
          <p class="footer__wrapper-title">HOMEMADE ICE CREAM MADE</p>
          <p class="footer__wrapper-subtitle">WITH PASSION</p>
       </div>
-      <div class="footer__wrapper-socials">
-         <ul class="footer__wrapper-list">
-            <li class="footer__wrapper-item">
-               <a
-                  class="footer__socials-link"
-                  href="http://github.com"
-                  target="_blank"
-                  aria-label="github"
-               >
-                  <svg class="footer__socials-icon" width="32" height="32">
-                     <use href="./images/icons.svg#icon-github-default"></use>
-                  </svg>
-               </a>
-            </li>
-            <li class="footer__wrapper-item">
-               <a
-                  class="footer__socials-link"
-                  href="https://web.telegram.org/z/"
-                  target="_blank"
-                  aria-label="telegram"
-               >
-                  <svg class="footer__socials-icon" width="32" height="32">
-                     <use href="./images/icons.svg#icon-telegram-default"></use>
-                  </svg>
-               </a>
-            </li>
-            <li class="footer__wrapper-item">
-               <a
-                  class="footer__socials-link"
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  aria-label="facebook"
-               >
-                  <svg class="footer__socials-icon" width="32" height="32">
-                     <use href="./images/icons.svg#icon-facebook-default"></use>
-                  </svg>
-               </a>
-            </li>
-         </ul>
-      </div>
-      <div class="footer__address">
-         <p class="footer__address-subtitle">Feel free to contact</p>
-         <a class="footer__address-link" href="tel:+61(0)383766284"
-            >+61(0)383766284</a
-         >
+      <div class="footer__wrapper-group">
+         <div class="footer__wrapper-socials">
+            <ul class="footer__wrapper-list">
+               <li class="footer__wrapper-item">
+                  <a
+                     class="footer__socials-link"
+                     href="http://github.com"
+                     target="_blank"
+                     aria-label="github"
+                  >
+                     <svg class="footer__socials-icon" width="32" height="32">
+                        <use
+                           href="./images/icons.svg#icon-github-default"
+                        ></use>
+                     </svg>
+                  </a>
+               </li>
+               <li class="footer__wrapper-item">
+                  <a
+                     class="footer__socials-link"
+                     href="https://web.telegram.org/z/"
+                     target="_blank"
+                     aria-label="telegram"
+                  >
+                     <svg class="footer__socials-icon" width="32" height="32">
+                        <use
+                           href="./images/icons.svg#icon-telegram-default"
+                        ></use>
+                     </svg>
+                  </a>
+               </li>
+               <li class="footer__wrapper-item">
+                  <a
+                     class="footer__socials-link"
+                     href="https://www.facebook.com/"
+                     target="_blank"
+                     aria-label="facebook"
+                  >
+                     <svg class="footer__socials-icon" width="32" height="32">
+                        <use
+                           href="./images/icons.svg#icon-facebook-default"
+                        ></use>
+                     </svg>
+                  </a>
+               </li>
+            </ul>
+         </div>
+         <div class="footer__address">
+            <p class="footer__address-subtitle">Feel free to contact</p>
+            <a class="footer__address-link" href="tel:+61(0)383766284"
+               >+61(0)383766284</a
+            >
+         </div>
       </div>
    </div>
    <div class="footer__copyright">
