--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -49,7 +49,7 @@
       width: 504px;
    }
 }
-
+// test
 .footer__wrapper-title {
    @include fonts($fw: 700, $fs: 18px, $lh: 22px);
    color: getColor('txt-white');
