JS-Зробив-анімацію-кліпання
Анімація кліпання працює на scroll

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -73,6 +73,19 @@
         </div>
         <div class="hero__company-info">
             <picture>
+                <source srcset="
+                    ./images/header/clipped/ice-cream-cone__clipped-d.png
+                    " type="image/png" media="(min-width: 1200px)">
+                <source srcset="
+                    ./images/header/clipped/ice-cream-cone__clipped-t.png
+                    " type="image/png" media="(min-width: 768px)">
+                <source srcset="
+                    ./images/header/clipped/ice-cream-cone__clipped-m.png
+                    " type="image/png" media="(max-width: 767px)">
+                <img src="./images/header/clipped/ice-cream-cone__clipped-d.png" alt="упоротий змій-морозинич, який кліпає"
+                    class="hero__img-animation">
+            </picture>
+            <picture>
                 <!-- desc -->
                 <source srcset="
                 ./images/header/ice-cream-cone__d.png    1x,
